# gd-resource-derive

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
