[package]
name = "gd-resource-derive"
version = "0.2.0"
edition = "2024"
license-file = "LICENSE"
description = "proc macro that does `impl into<$YOUR_STRUCT> for godot::prelude::Resource`"
repository = "https://github.com/eric-ene/gd-resource-derive"

[lib]
proc-macro = true

[dependencies]
godot = "0.3.4"
quote = "1.0.40"
syn = "2.0.104"
